syntax = "proto3";

package demo.proto.nested;

option java_multiple_files = true;

message LevelOne {
    message LevelTwo {
        message LevelThree {
            string value = 1;
        }
    }
    LevelOne one = 1;
    LevelTwo two = 2;
    LevelTwo.LevelThree three = 3;
}
